--- a/Monsuun.vcxproj.filters
+++ b/Monsuun.vcxproj.filters
@@ -74,5 +74,8 @@
     <ClInclude Include="Vec2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ComponentManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
